# tas2563

./: Cargo.toml  README.md  build.rs
examples/nrf52840-embassy/: Cargo.toml  README.md
examples/nrf52840-embassy/.cargo/: config.toml
examples/samples/: powerup.raw  sparkle.raw  windows-xp.raw  windows.raw  windows95.raw
src/: bulk.rs  commands.rs  hl.rs  lib.rs  ll.rs  prelude.rs
src/ll/: i2c.rs  ll.yaml  spi.rs  test.rs
util/cfgtransform/: Cargo.toml
util/cfgtransform/example/: configuration_0_TuningMode_48KHz_DEV_A_COEFF.bulk  configuration_0_TuningMode_48KHz_DEV_A_COEFF.bulk_dedup  configuration_0_TuningMode_48KHz_DEV_A_COEFF.cfg  program_0_Tuning Mode.bulk  program_0_Tuning Mode.bulk_dedup  program_0_Tuning Mode.cfg  test.bulk  test.cfg
util/cfgtransform/src/: analyzer.rs  ast.rs  bulk.rs  grammar.lalrpop  main.rs
