[package]
name = "tas2563"
version = "0.1.0"
edition = "2021"
authors = ["git@woutergeraedts.nl"]
description = "Device driver for the TAS2563 Texas Instruments mono digital audio amplifier."
readme = "README.md"
repository = "https://github.com/Wassasin/tas2563"

license = "MIT OR Apache-2.0"
keywords = ["embedded", "driver", "audio", "amplifier"]
categories = ["embedded", "no-std"]
exclude = ["Cargo.lock", ".gitignore"]

[dependencies]
device-driver = "0.7"
device-driver-macros = { version = "0.7", features = ["yaml"] }

embedded-hal = "1.0"
embedded-hal-async = "1.0"

num_enum = { version = "0.7", default-features = false }
bitvec = { version = "1.0", default-features = false }
derive_more = { version = "1.0", features = ["from", "into"], default-features = false }

defmt = { version = "0.3", optional = true }

[dev-dependencies]
embedded-hal-mock = { version = "0.11", features = ["eh1", "embedded-hal-async"] }
async-std = { version = "1.12", features = ["attributes"]}

[features]
default = ["defmt"]
defmt = ["dep:defmt"]