[package]
name = "cfgtransform"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"

clap = { version = "4.5", features = ["derive"] }

itertools = "0.13"
lalrpop-util = { version = "0.21", features = ["lexer", "unicode"] }

[build-dependencies]
lalrpop = "0.21"
